--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,15 @@
 <html lang="en" class="dark">
 <head>
   <meta charset="utf-8">
-  <title>MeteoAngular</title>
+  <title>ngMeteo</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <meta property='og:title' content='ngMeteo'/>
+  <meta property='og:image' content='//cdn.icon-icons.com/icons2/1370/PNG/512/if-weather-3-2682848_90785.png'/>
+  <meta property='og:description' content='A simple web app made with Angular17, Tailwind and Daisyui'/>
+  <meta property='og:url' content='//meteo-angular.vercel.app/'/>
+
 </head>
 <body>
   <app-root></app-root>
